--- a/artifact2/artifact02style.css
+++ b/artifact2/artifact02style.css
@@ -24,8 +24,11 @@
   clear:both; 
 }
 
-#container{
- margin:0 auto;
+#container {
+ margin-top:40%;
+ margin-left:10%;
+ margin-right:10%;
+ margin-bottom:5%;
 }
 
 body {
