--- a/artifact2/artifact02style.css
+++ b/artifact2/artifact02style.css
@@ -38,13 +38,14 @@ body {
 #title {
  position:fixed;
  top:0px;
+ right0px:
  left:0px; 
  padding:10px;
  margin:0px;
  width:100%;
  background-color:lightyellow;
  text-align:center; 
- z-index:10;
+ z-index:1;
 }
 
 #footer {
