--- a/artifact2/artifact02style.css
+++ b/artifact2/artifact02style.css
@@ -58,3 +58,8 @@ img {
  margin-left: 5px;
  margin-top:10px;
  }
+
+font-family: 'JustLettersMedium'; 
+ font-weight: normal; 
+ font-style: normal; 
+ font-size:36px;
