--- a/m04/m04style.css
+++ b/m04/m04style.css
@@ -7,7 +7,7 @@ body {
 width: 90%;
 margin: 0 auto;
 background-image:url ("v935-aum-16.jpg");
-background-color: #e6fffa}
+}
 			
 #content {
 overflow: auto;}
