--- a/m04/m04style.css
+++ b/m04/m04style.css
@@ -6,7 +6,7 @@ background-color: #ffebe6;}
 body {				
 width: 90%;
 margin: 0 auto;
-background-image:url ("v935-aum-16.jpg");
+background-image: url(v935-aum-16.jpg);
 }
 			
 #content {
