--- a/m04/m04style.css
+++ b/m04/m04style.css
@@ -4,7 +4,10 @@ margin-bottom: 1em;
 background-color: #ffebe6;}
 
 body {				
-background-image:url(v935-aum-16.jpg);
+background-image: url("..v935-aum-16.jpg");
+background-size: cover;
+background-position: 0% 25%;
+background-attachment: fixed;
 }
 			
 #content {
