--- a/m04/m04style.css
+++ b/m04/m04style.css
@@ -1,7 +1,10 @@
 #feature, .article {
 height: 10em;
 margin-bottom: 1em;
-background-color: #ffebe6;}
+background-color: #ffebe6;
+background-image: url("https://www.clipartmax.com/png/small/245-2452696_strawberry-drawing-animation-strawberry-drawing-transparent-background.png")
+background-size:cover;
+}
 
 body {				
 background-image: url("..v935-aum-16.jpg");
