--- a/m04/m04style.css
+++ b/m04/m04style.css
@@ -1,7 +1,7 @@
 #feature, .article {
 height: 10em;
 margin-bottom: 1em;
-background-image: url("https://www.clipartmax.com/png/small/245-2452696_strawberry-drawing-animation-strawberry-drawing-transparent-background.png")
+background-image: url("..clipart2452696.png")
 background-size: cover;
 background-color: #ffebe6;
 }
