--- a/m04/m04style.css
+++ b/m04/m04style.css
@@ -5,7 +5,7 @@ background-color: #ffebe6;
 }
 
 body {				
-background-image: src(v935-aum-16.jpg);
+background-image: url("..v935-aum-16.jpg");
 background-size: cover;
 background-position: 0% 25%;
 background-attachment: fixed;
