--- a/m04/m04style.css
+++ b/m04/m04style.css
@@ -1,6 +1,7 @@
-#feature, .article {
+#feature {
 height: 10em;
 margin-bottom: 1em;
+background-image: url("https://github.com/rquiambao93/prog109/blob/8acd41a3db0698987fb4a24d4dd8fa9687126b66/m04/clipart2452696.png")
 background-color: #ffebe6;
 }
 
@@ -10,7 +11,7 @@ background-size: cover;
 background-position: 0% 25%;
 background-attachment: fixed;
 }
-m04/v935-aum-16.jpg
+
 #content {
 overflow: auto;}
 
