--- a/m04/m04style.css
+++ b/m04/m04style.css
@@ -2,6 +2,8 @@
 height: 10em;
 margin-bottom: 1em;
 background-image: url("https://github.com/rquiambao93/prog109/blob/8acd41a3db0698987fb4a24d4dd8fa9687126b66/m04/clipart2452696.png")
+background-repeat: no-repeat;
+background-position: right;
 background-color: #ffebe6;
 }
 
