--- a/m04/m04style.css
+++ b/m04/m04style.css
@@ -4,7 +4,7 @@ margin-bottom: 1em;
 background-color: #ffebe6;}
 
 body {				
-background-image: url("https://github.com/rquiambao93/prog109/blob/01ec4902069215c5faefe6986bbf48485555ab3a/m04/v935-aum-16.jpg");
+background-image: url("..m04/v935-aum-16.jpg");
 background-size: cover;
 background-position: 0% 25%;
 background-attachment: fixed;
