--- a/m04/m04style.css
+++ b/m04/m04style.css
@@ -1,13 +1,19 @@
 #feature, .article {
-height: 10em;
-margin-bottom: 1em;
-background-color: #ffebe6;}
+  height: 10em;
+  margin-bottom: 1em;
+  background-color: #ffebe6;}
 
-body {				
-background-image: url("https://github.com/rquiambao93/prog109/blob/f67e9d57eb1970fcb4b95e35b0012c9b6be26b13/m04/v935-aum-16.jpg");
-background-size: cover;
-background-position: 0% 25%;
-background-attachment: fixed;
+body, html {				
+  height: 100%;
+  margin:0;
+}
+
+.bg {
+  background-image: url("v935-aum-16.jpg")
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 #content {
