--- a/m04/m04style.css
+++ b/m04/m04style.css
@@ -8,10 +8,10 @@ body, html {
   margin: 0;
 }
 
-.bg {
+#bg {
   background-image: url("https://github.com/rquiambao93/prog109/blob/6c56fa445580375f49db2f705cdccd4b84f14665/m04/v935-aum-16.jpg")
   height: 100%;
- background-position: center;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
