--- a/m04/m04style.css
+++ b/m04/m04style.css
@@ -4,7 +4,7 @@
   background-color: #ffebe6;}
 
 body {				
-  background-image: url("..v935-aum-16.jpg");
+  background-image: url("m04/v935-aum-16.jpg");
   background-repeat: no-repeat;
   background-position: right top;
   background-attachment: scroll;
