--- a/m04/m04style.css
+++ b/m04/m04style.css
@@ -5,7 +5,7 @@
 
 body {				
   background-image: url("m04/v935-aum-16.jpg");
-  background-size: cover 
+  background-size: cover;
   background-position: 0% 25%;
   background-attachment: fixed;
 }
