--- a/finalprojectartifacts/finalprojectstyle.css
+++ b/finalprojectartifacts/finalprojectstyle.css
@@ -2,13 +2,13 @@
   height: 10em;
   margin-bottom: 1em;
   background-color: #ffebe6;
- background-image: url("..m04/clipart2452696.png");
+ background-image: url("..finalprojectartifacts/clipart2452696.png");
  background-size:contain;
  background-position: right;
  background-repeat:no-repeat;}
 
 body {				
-  background-image: url("..m04/v935-aum-16.jpg");
+  background-image: url("..finalprojectartifacts/v935-aum-16.jpg");
   background-size: cover;
   background-position: 0% 25%;
   background-attachment: fixed;
