--- a/finaproject/finalprojectstyle.css
+++ b/finaproject/finalprojectstyle.css
@@ -2,7 +2,7 @@
   height: 10em;
   margin-bottom: 1em;
   background-color: #ffebe6;
- background-image: url("..finaproject/clipart2452696.png");
+ background-image: url("https://github.com/rquiambao93/prog109/blob/79e6ca1b20b80dfbe027e3762644b2ad7b004d7f/finaproject/v935-aum-16.jpg");
  background-size:contain;
  background-position: right;
  background-repeat:no-repeat;}
