--- a/finaproject/finalprojectstyle.css
+++ b/finaproject/finalprojectstyle.css
@@ -2,13 +2,13 @@
   height: 10em;
   margin-bottom: 1em;
   background-color: #ffebe6;
- background-image: url("https://github.com/rquiambao93/prog109/blob/2d31c562b5257a4c77bc371ac75bbc142a2848fb/v935-aum-16.jpg");
+ background-image: url("v935-aum-16.jpg");
  background-size:contain;
  background-position: right;
  background-repeat:no-repeat;}
 
 body {				
-  background-image: url("..finaproject/v935-aum-16.jpg");
+  background-image: url("v935-aum-16.jpg");
   background-size: cover;
   background-position: 0% 25%;
   background-attachment: fixed;
