--- a/module07/m07style.css
+++ b/module07/m07style.css
@@ -72,6 +72,9 @@ p + h2 {
   border-top: 1px solid #fff; 
   padding-top: 1em;} 
 #hotel2 {
+  padding-top: 1em;
+  padding-bottom: 1em;}
+#hotel3 {
   border-bottom: 1px solid #fff; 
   padding-bottom: 1em;}
 
