--- a/m05/m05style.css
+++ b/m05/m05style.css
@@ -1,36 +1,46 @@
-@import url(http://fonts.googleapis.com/css?family=Wellfleet);
+@import url(https://fonts.googleapis.com/css?family=Wellfleet);
 
 body {
 	background-color: #523620;
 	color: #fff;
-	font-family: 'Wellfleet', times, serif;
+	font-family: "Wellfleet", times, serif;
 	font-size: 150%;
-	margin: 0px 0px 0px 0px;}
+	margin: 0px 0px 0px 0px;
+}
 
 h1 {
-	background-image: url('../images/bullseye-logo.png');
+	background-image: url("/module05/images/bullseye-logo.png");
 	background-repeat: no-repeat;
 	text-indent: 100%;
 	white-space: nowrap;
 	overflow: hidden;
 	height: 109px;
 	width: 643px;
-	margin: 40px auto;}
+	margin: 40px auto;
+}
+h2 {
+	margin-top: 0;
+}
 
 #teacher {
-	float:right;
-	margin:0px 30px 0px 0px;}
+	float: right;
+	margin: 0px 30px 0px 0px;
+}
 #teacher2 {
-	float:right;
-	margin:135px 30px 0px 0px;}
+	float: right;
+	margin: 135px 30px 0px 0px;
+}
 
-#page1, #page2 {
+#page1,
+#page2 {
 	background-color: #fecc6f;
 	height: 596px;
 	padding: 10px;
-	min-width: 779px;}
+	min-width: 779px;
+}
 #page2 {
-	height: 730px;}
+	height: 730px;
+}
 
 #answer {
 	border: 12px double #fff;
@@ -39,7 +49,8 @@ h1 {
 	padding: 20px;
 	margin: 70px auto 10px auto;
 	width: 250px;
-	text-align: center;}
+	text-align: center;
+}
 
 #blackboard {
 	background-color: #425a5a;
@@ -49,4 +60,5 @@ h1 {
 	margin: 0px auto;
 	height: 370px;
 	width: 600px;
-	text-align: center;}
+	text-align: center;
+}
